--- a/src/components/dashboard-cards.css
+++ b/src/components/dashboard-cards.css
@@ -69,7 +69,7 @@
 
 .Dashboard .card{
     text-align: center;
-    max-width: 400px;
+    min-width: 400px;
     background-color: white;
     margin: 20px;
     padding: 30px 50px 50px 50px;
@@ -131,9 +131,23 @@
     bottom: 20px;
     transition: all 0.5s ease;
     cursor: pointer;
+    color: black;
+    transition: all 0.4s ease;
 }
 
-.Dashboard .details i:hover{
+.Dashboard .details span{
+    margin-right: 5px;
+}
+
+.Dashboard .details:hover{
     font-size: 12px;
     cursor: pointer;
+    color: rgb(230, 15, 140);
+}
+
+.Dashboard .footer{
+    width: 100%;
+    height: 100px;
+    background-color: rgb(0, 0, 78);
+    color: white;
 }
