--- a/src/components/AdminSidebar.css
+++ b/src/components/AdminSidebar.css
@@ -1,9 +1,10 @@
 #header {
-    position: relative;
-    width: max-content;
-  }
-  #header .pro-sidebar {
-    height: 100vh;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 1;
+  width: 250px;
+  height: 100vh;
   }
   #header .closemenu {
     color: #f1f1eb;
