--- a/src/layout/Admin.css
+++ b/src/layout/Admin.css
@@ -1,9 +1,9 @@
-.wrapper{
-    margin-left: 250px;
+.wrapper {
+    padding-left: 80px;
 }
 
-@media only screen and (max-width: 1200px) {
-    .wrapper {
-    margin-left: 80px;
+@media only screen and (max-width:550px) {
+    .wrapper{
+        padding-left: 50px;
     }
-  }
+}
